nav bar styling and particles done

--- a/portfolio/styles/portfolioIndex.css
+++ b/portfolio/styles/portfolioIndex.css
@@ -1,70 +1,114 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap");
+
+
+
 :root{
-  --primaryBack : rgb(23, 23, 45);
-  --textColor : #fff;
+  --navBack : #fff;
+  --textColor : #0e2431;
+  --bodyBack: #f7f7f7;
+  --selection:#2b3dda;
+  
 }
 *{
-  color: var(--textColor) ;
+  /* color: var(--textColor) ; */
   margin: 0;
   padding: 0;
+  box-sizing:border-box;
 }
 
+*::selection {
+  background: var(--selection);
+  color: #fff;
+}
+
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+body{
+  background: var(--bodyBack);
+  font-family: "Poppins", sans-serif;
+}
 .back{
-  box-sizing:border-box;
-  background-color: var(--primaryBack);
+  
+  /* background-color: var(--primaryBack); */
   /* background-image: url("https://portalzine.de/wp-content/uploads/sites/3/2016/09/particles2.jpg") ; */
-  background-size:cover;
-  height: 100vh;
-  width: 100%;
-  margin-top: 0;
+
+  
+  
 }
 .header{
   box-sizing: content-box;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-}
-.search{
-  margin-right: 20px;
+  background-color:var(--navBack);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  box-shadow: 0 1px 4px rgba(146, 161, 176, 0.3);
+  padding: 1.7rem 10%;
+  padding-bottom: 2rem;
+  height: 3.0rem;
   
 }
+
 .navBar{
   box-sizing: border-box;
   display:flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-wrap:wrap;
   position:static;
   
 }
-.tags{
-  padding-left: 110px;
-  color: var(--textColor);
-  justify-content: flex-end;
-  padding-right: 50px;
-  
-  
-}
-a{
-  text-decoration: none;
-  color:var(--textColor);
-  
-}
-.navB a{
-  font-size: 15px;
-  color: var(--textColor);
-}
-
 
 .logo{
-  margin-left: 20px;
-  margin-top: 15px;
+  margin-left: 0px;
+  margin-top: 0px;
 }
 .logo img{
-  width: 150px;
-  height: 100px;
+  width: 8rem;
+  height: 4rem;
 }
 
+
+.header .navBar ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header .navBar .tags ul li {
+  margin-left: 2.5rem;
+}
+.header .navBar .tags a {
+  font-size: 1.57rem;
+  color:var(--textColor);
+  font-weight: 600;
+  text-decoration:none;
+  letter-spacing: 0.04rem;
+  transition: 0.2s;
+}
+
+.header .navBar .tags ul li a.active,
+.header .navBar .tags ul li a:hover {
+  color: #011aff;
+  border-bottom: 0.2rem solid #011aff;
+  padding: 0.5rem 0;
+}
+
+
+
+
+
+
+
 .h-text{
-  padding-top: 200px;
+  padding-top: 20px;
   margin-left: 60px;
 }
 .h-animate .text{
@@ -78,7 +122,7 @@ a{
   color: var(--textColor);
 
 }
-@keyframes animate{
+/* @keyframes animate{
   40%, 60%{
     left:calc(100% + 4px);
 
@@ -86,7 +130,7 @@ a{
   100%{
     left: 0%;
   }
-}
+} */
 .main{
   text-align: center;
   
