--- a/portfolio/styles/portfolioIndex.css
+++ b/portfolio/styles/portfolioIndex.css
@@ -8,7 +8,7 @@
   --textColor : #0e2431;
   --bodyBack: #f7f7f7;
   --selection:#2b3dda;
-  
+  --socialIcon: #09011b;
 }
 *{
   /* color: var(--textColor) ; */
@@ -32,14 +32,10 @@ body{
   background: var(--bodyBack);
   font-family: "Poppins", sans-serif;
 }
-.back{
-  
-  /* background-color: var(--primaryBack); */
-  /* background-image: url("https://portalzine.de/wp-content/uploads/sites/3/2016/09/particles2.jpg") ; */
 
-  
-  
-}
+
+/* navbar starts */
+
 .header{
   box-sizing: content-box;
   background-color:var(--navBack);
@@ -101,40 +97,158 @@ body{
   padding: 0.5rem 0;
 }
 
+/* navbar ends */
 
 
-
-
-
-
-.h-text{
-  padding-top: 20px;
-  margin-left: 60px;
-}
-.h-animate .text{
+/* hero section starts*/
+.main {
   position: relative;
-  color: var(--textColor);
-  font-size: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  min-height: 100vh;
+  align-items: center;
+}
+.main #particles-js {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+.main::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+.main .content {
+  flex: 1 1 40rem;
+  padding-top: 1rem;
+  padding-left: 8rem;
+  z-index: 1;
+}
+.main .image {
+  flex: 1 1 40rem;
+  z-index: 1;
+}
+.main .image img {
+  width: 70%;
+  margin-left: 6rem;
+  border-radius: 50%;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+.main .image img:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+}
+.main .content h2 {
+  font-size: 5rem;
+  font-weight: 800;
+  color: #002057;
+}
+.main .content h2 span {
+  font-size: 5rem;
+  font-weight: 800;
+  color: #ff7b00;
+}
+.main .content p {
+  font-size: 2.5rem;
+  color: #000;
   font-weight: 600;
+  padding: 1rem 0;
 }
-
-.h-animate .text .first-text{
-  color: var(--textColor);
-
+.main .content p span {
+  font-size: 2.5rem;
+  color: rgb(148, 8, 8);
+  font-weight: 600;
+  padding: 1rem 0;
 }
-/* @keyframes animate{
-  40%, 60%{
-    left:calc(100% + 4px);
-
-  }
-  100%{
-    left: 0%;
-  }
-} */
-.main{
-  text-align: center;
+.main .btn {
+  margin-top: 1rem;
+  position: absolute;
+  line-height: 0;
+  padding: 1.6rem 3rem;
+  border-radius: 4em;
+  transition: 0.5s;
+  color: #fff;
+  background: #2506ad;
+  box-shadow: 0px 5px 18px rgba(48, 68, 247, 0.6);
+  font-family: "Nunito", sans-serif;
+}
+.main .btn span {
+  font-weight: 700;
+  font-size: 1.7rem;
+  letter-spacing: 0.1rem;
+  
   
 }
+.main .btn i {
+  margin-left: 0.3rem;
+  font-size: 1.5rem;
+  transition: 0.3s;
+}
+.main .btn:hover {
+  background: #1a047e;
+}
+.main .btn:hover i {
+  transform: translateX(5px);
+}
+
+/* social icons start */
+.socials {
+  position: relative;
+  margin-top: 9rem;
+}
+.socials .social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.socials .social-icons li {
+  display: inline-block;
+  margin-bottom: 14px;
+}
+.social-icons a {
+  font-size: 2rem;
+  display: inline-block;
+  line-height: 44px;
+  color: var(--navBack);
+  background-color:var(--socialIcon) ;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+  color: #fff;
+  background-color: #0685da;
+}
+.social-icons a.github:hover {
+  background-color: #0e0e0e;
+}
+.social-icons a.twitter:hover {
+  background-color: #00aced;
+}
+.social-icons a.linkedin:hover {
+  background-color: #007bb6;
+}
+
+.social-icons a.instagram:hover {
+  background-color: #ee00da;
+}
+.social-icons a.facebook:hover {
+  background-color: #00aced;
+}
+/* social icons end */
 
 
 
@@ -203,15 +317,15 @@ body{
 
 /* #####scroll bar designing#### */
 ::-webkit-scrollbar{
-  width: 8px;
-  background-color: black;
+  width: 5px;
+  background-color: transparent;
 }
 ::-webkit-scrollbar-track{
-  box-shadow:inset 0 0 6px rgb(45, 45, 45);
+  /* box-shadow:inset 0 0 6px rgb(45, 45, 45); */
   border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb{
-  background: rgb(255, 55, 255); 
+  background: rgb(155, 128, 252); 
   border-radius: 10px;
 }
 /* ####scroll bar designing#### */
