colours to change

--- a/portfolio/styles/portfolioIndex.css
+++ b/portfolio/styles/portfolioIndex.css
@@ -6,7 +6,7 @@
 :root{
   --navBack : #fff;
   --textColor : #0e2431;
-  --bodyBack: #f7f7f7;
+  --bodyBack: #ffffff;
   --selection:#2b3dda;
   --socialIcon: #09011b;
 }
